--- a/assets/scss/supports/_table.scss
+++ b/assets/scss/supports/_table.scss
@@ -24,3 +24,11 @@
     z-index: 100;
   }
 }
+
+@media (max-width: 767px) {
+  #table-controls {
+    .control-item {
+      margin: 10px;
+    }
+  }
+}
