Add `.prev-next-spacing` class for table navigation styling adjustments

--- a/style.css
+++ b/style.css
@@ -811,6 +811,11 @@ footer,
 }
 
 /** Table CSS */
+.prev-next-spacing {
+  position: relative;
+  top: 15px;
+}
+
 .save-edit-btn,
 .cancel-edit-btn {
   margin-top: -84px;
