--- a/assets/scss/supports/_table.scss
+++ b/assets/scss/supports/_table.scss
@@ -1,4 +1,8 @@
 /** Table CSS */
+.prev-next-spacing {
+  position: relative;
+  top: 15px;
+}
 .save-edit-btn,
 .cancel-edit-btn {
   margin-top: -84px;
